--- a/src/commands/commands.css
+++ b/src/commands/commands.css
@@ -69,7 +69,7 @@
 }
 
 #notification-message-close {
-    background-image: url("../Images/Close.png");
+    background-image: url("https://stratec-it.github.io/PhishingAddin/assets/Close.png");
     background-repeat: no-repeat;
     width: 24px;
     height: 24px;
